[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/MainScreen.gd" type="Script" id=1]
[ext_resource path="res://ui/font_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/button.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/button_focus.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/font.tres" type="DynamicFont" id=5]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 0
light_mode = 0
_sections_unfolded = [ "Resource" ]

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )

[node name="Title" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 6.0
margin_right = 63.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "ONYCHOPHORA"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Play" type="Button" parent="." index="1"]

material = SubResource( 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 44.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Help")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "PLAY"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Material", "Rect", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Help" type="Button" parent="." index="2"]

material = SubResource( 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 34.0
margin_right = 44.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../Play")
focus_neighbour_bottom = NodePath("../Exit")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "HELP"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Material", "Rect", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Exit" type="Button" parent="." index="3"]

material = SubResource( 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 48.0
margin_right = 44.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../Help")
focus_neighbour_bottom = NodePath("../Play")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "EXIT"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Material", "Rect", "custom_constants", "custom_fonts", "custom_styles" ]

[connection signal="button_down" from="Play" to="." method="_on_Play_button_down"]

[connection signal="button_down" from="Help" to="." method="_on_Help_button_down"]

[connection signal="button_down" from="Exit" to="." method="_on_Exit_button_down"]


